✨ feat(app options): safely activate tsConfigPath because of @c8y/cli 1005.1.0 upgrade

--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,7 @@
       "upgrade": true,
       "brandingEntry": "./branding/index.less",
       "entryModule": "./app/app.module#AppModule",
-      "xtsConfigPath": "../tsconfig.app.json"
+      "tsConfigPath": "../tsconfig.app.json"
     }
   }
 }
